language/move-lang/tests/move_check/expansion/unpack_assign_block_expr.exp
error: 

   ┌── tests/move_check/expansion/unpack_assign_block_expr.move:4:11 ───
   │
 4 │         S { let f = 0; } = S { f: 0 };
   │           ^^^^^^^^^^^^^^ Invalid fields for deconstructing assignment. Expected: named arguments
   │

