language/move-lang/tests/move_check/expansion/unpack_assign_block_expr.move
module M {
    struct S { f: u64 }
    fun foo() {
        S { let f = 0; } = S { f: 0 };
    }
}
